# matrix653_seL4

./: .config  .config.old  .gitignore  .gitmodules  CMakeLists.txt  README.md  apps  configs  manifest.txt  manifest.xml  settings.cmake
batch-git-modules/: fetch.sh
kernel/include/: bootinfo.h
kernel/src/arch/arm/kernel/: thread.c
projects/vm-examples/apps/Arm/vm_minimal/: CMakeLists.txt
projects/vm-rtos/: CMakeLists.txt  Findcamkes-vm-rtos.cmake  vm-rtos-helpers.cmake
projects/vm/components/VM_Arm/configurations/: vm.h
projects/vm/components/VM_Arm/src/: main.c
